fixed a gap under the image

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,9 @@
     max-width: 1158px;
     margin: 10px auto;
 }
+.gallery__image{
+    display: block;
+}
 .photo-card{
     width: calc((100% - 30px) / 4);
 }
